Fix fonts on firefox

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,7 @@
 @font-face {
     font-family: 'FSpirit';
-    src: url('/fonts/fightspirit.ttf');
-}
-
-@font-face {
-    font-family: 'FSpirit';
-    src: url('/fonts/fightspirit.eot');
+	src: url('/fonts/fightspirit.eot');
+    src: url('/fonts/fightspirit.ttf') format('truetype');
 }
 
 html, body {
